# wave-fn-collapse

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs
