[package]
name = "wave-fn-collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
derive_more = "0.99.17"
generic-array = "0.14.7"
num = "0.4.0"
num-format = "0.4.4"
rand = "0.8.5"
typenum = "1.16.0"
